src-org/main/default/objects/Booking__c/fields/Checkin_Status__c.field-meta.xml
<CustomField>
    <fullName>Checkin_Status__c</fullName>
    <label>Checkin Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Checked-In</fullName>
            </value>
            <value>
                <fullName>Checked-In</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>