src-org/main/default/objects/Booking__c/fields/Meal_Preference__c.field-meta.xml
<CustomField>
    <fullName>Meal_Preference__c</fullName>
    <label>Meal Preference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vegetarian</fullName>
            </value>
            <value>
                <fullName>Non-Vegetarian</fullName>
            </value>
            <value>
                <fullName>Vegan</fullName>
            </value>
            <value>
                <fullName>Diabetic</fullName>
            </value>
            <value>
                <fullName>No Meal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>